{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 63,
  "lineage": "94977bad-37c5-8e03-62e9-5550cd1f3b7a",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0998cec35f1898805",
            "association_id": "eipassoc-04c8e73df2c194df9",
            "domain": "vpc",
            "id": "eipalloc-0998cec35f1898805",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09ab861d7b0a8c689",
            "private_dns": "ip-10-0-1-172.ec2.internal",
            "private_ip": "10.0.1.172",
            "public_dns": "ec2-44-217-225-193.compute-1.amazonaws.com",
            "public_ip": "44.217.225.193",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412991794543:internet-gateway/igw-0b79f315cb6699bc8",
            "id": "igw-0b79f315cb6699bc8",
            "owner_id": "412991794543",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0bcb89a7a2a01e201"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0998cec35f1898805",
            "association_id": "eipassoc-04c8e73df2c194df9",
            "connectivity_type": "public",
            "id": "nat-07970723ab75695e7",
            "network_interface_id": "eni-09ab861d7b0a8c689",
            "private_ip": "10.0.1.172",
            "public_ip": "44.217.225.193",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c631736b8db386c7",
            "tags": {
              "Environment": "dev",
              "Name": "nat"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-088d24c02ad5a9e0e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07970723ab75695e7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-088d24c02ad5a9e0e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b79f315cb6699bc8",
            "id": "r-rtb-094c99fbc9124b6ea1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-094c99fbc9124b6ea",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412991794543:route-table/rtb-088d24c02ad5a9e0e",
            "id": "rtb-088d24c02ad5a9e0e",
            "owner_id": "412991794543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07970723ab75695e7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcb89a7a2a01e201"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412991794543:route-table/rtb-094c99fbc9124b6ea",
            "id": "rtb-094c99fbc9124b6ea",
            "owner_id": "412991794543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b79f315cb6699bc8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcb89a7a2a01e201"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037607bd9145f7cc5",
            "route_table_id": "rtb-088d24c02ad5a9e0e",
            "subnet_id": "subnet-0fdf8aa81d028e99e"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4307deafb2d0bd3",
            "route_table_id": "rtb-094c99fbc9124b6ea",
            "subnet_id": "subnet-0c631736b8db386c7"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06131dd29d2f39277",
            "route_table_id": "rtb-094c99fbc9124b6ea",
            "subnet_id": "subnet-037677b7cb4eae6a0"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412991794543:security-group/sg-0b02c0f79156457e4",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0b02c0f79156457e4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "dev-default-sg",
            "name_prefix": "",
            "owner_id": "412991794543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcb89a7a2a01e201"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412991794543:security-group/sg-06276fc632d5598c0",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06276fc632d5598c0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fa959a60aa458417"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-app-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "412991794543",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bcb89a7a2a01e201"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.lb",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412991794543:security-group/sg-0fa959a60aa458417",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa959a60aa458417",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-app-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "412991794543",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bcb89a7a2a01e201"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412991794543:subnet/subnet-0fdf8aa81d028e99e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdf8aa81d028e99e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412991794543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1a-private-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1a-private-subnet"
            },
            "vpc_id": "vpc-0bcb89a7a2a01e201"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412991794543:subnet/subnet-0c631736b8db386c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c631736b8db386c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412991794543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1a-      public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1a-      public-subnet"
            },
            "vpc_id": "vpc-0bcb89a7a2a01e201"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412991794543:subnet/subnet-037677b7cb4eae6a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037677b7cb4eae6a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412991794543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1b-      public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1b-      public-subnet"
            },
            "vpc_id": "vpc-0bcb89a7a2a01e201"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412991794543:vpc/vpc-0bcb89a7a2a01e201",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08646777ca9590a7b",
            "default_route_table_id": "rtb-04cd9a1ed1a7a63fe",
            "default_security_group_id": "sg-01c60e305c8791658",
            "dhcp_options_id": "dopt-04d9deed1b2bcbe27",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bcb89a7a2a01e201",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04cd9a1ed1a7a63fe",
            "owner_id": "412991794543",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:412991794543:loadbalancer/app/web-load-balancer/2f10d04abc541448",
            "arn_suffix": "app/web-load-balancer/2f10d04abc541448",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-load-balancer-507669458.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:412991794543:loadbalancer/app/web-load-balancer/2f10d04abc541448",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fa959a60aa458417"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-037677b7cb4eae6a0"
              },
              {
                "subnet_id": "subnet-0c631736b8db386c7"
              }
            ],
            "subnets": [
              "subnet-037677b7cb4eae6a0",
              "subnet-0c631736b8db386c7"
            ],
            "vpc_id": "vpc-0bcb89a7a2a01e201",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.aws_security_group.lb",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:412991794543:listener/app/web-load-balancer/2f10d04abc541448/990bd3f8dbb569e9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:412991794543:targetgroup/web-target-group/c9428e46c6440bd8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:412991794543:listener/app/web-load-balancer/2f10d04abc541448/990bd3f8dbb569e9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:412991794543:loadbalancer/app/web-load-balancer/2f10d04abc541448",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.lb",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.web.aws_alb.main",
            "module.web.aws_alb_target_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:412991794543:targetgroup/web-target-group/c9428e46c6440bd8",
            "arn_suffix": "targetgroup/web-target-group/c9428e46c6440bd8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:412991794543:targetgroup/web-target-group/c9428e46c6440bd8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bcb89a7a2a01e201"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}